[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2" # Web server
anyhow = "1" # Error handling
base64 = "0.13" # Base64 encoding/decoding
bytes = "1" # Handle byte streams
image = "0.23" # Handle images
lazy_static = "1" # Use macros to conveniently initialize static variables
lru = "0.6" # LRU cache
percent-encoding = "2" # URL encoding/decoding
photon-rs = "0.3" # Image effects
prost = "0.8" # Protobuf processing
reqwest = "0.11" # HTTP cliebnt
serde = { version = "1", features = ["derive"] } # Serialize/deserialize data
tokio = { version = "1", features = ["full"] } # Asynchronous processing
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] } # Service handling and middlewar
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace" ] } # HTTP middleware
tracing = "0.1" # Logging and tracing
tracing-subscriber = "0.2" # Logging and tracing

[build-dependencies]
prost-build = "0.8" # Compile protobuf
